syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "proto.proto";

package aspia.proto.power;

// —ообщени€, которые отправл€ютс€ от клиента к хосту.
message ClientToHost
{
    PowerEvent power_event = 1;
}
