//
// PROJECT:         Aspia
// FILE:            proto/mru.proto
// LICENSE:         Mozilla Public License Version 2.0
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "client_config.proto";

package aspia.proto;

message MRU
{
    repeated ClientConfig client_config = 1;
}
